Fixes picture alignment bug in webkit browsers.

--- a/custom-css/jquery.bxslider.scss
+++ b/custom-css/jquery.bxslider.scss
@@ -57,7 +57,7 @@
 	//box model
 	margin: 0;
 	//layout
-	webkit-align-items: center;
+	-webkit-align-items: center;
 	       align-items: center;
 	display: -webkit-flex;
 	display:         flex;
